--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-addons-css-transition-group": "^15.0.7"
+    "@types/react-addons-css-transition-group": "^15.0.7",
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
